--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,14 @@
 Package: aafractions.ncc
 Title: Alcohol Attributable Fractions Lookup Tables
-Version: 0.0.0.9000
+Version: 0.0.1.9000
 Authors@R: person("Ian", "Bates", email = "ian.bates@nottscc.gov.uk", role = c("aut", "cre"))
-Description: Provides lookup tables for use with alcohol attributable fractions analyses
+Description: Provides lookup tables for use with alcohol attributable fractions analyses.
 Depends: R (>= 3.4.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Suggests: knitr,
-    rmarkdown
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
