--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,8 @@ Depends: R (>= 3.4.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Imports: data.table,
+    dplyr
 Suggests: knitr,
     rmarkdown,
     testthat
