--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,5 @@
 
 export(reconstruct)
 import(dplyr)
-importFrom(data.table,dcast)
+importFrom(data.table,dcast.data.table)
+importFrom(data.table,setDT)
