--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Imports: data.table,
     dplyr
 Suggests: knitr,
     rmarkdown,
-    testthat
+    testthat,
+    readxl
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
