[uc_example] Modify analysis
Similar to alcohol (narrow) by coincidence.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,4 @@ import(dplyr)
 importFrom(data.table,dcast.data.table)
 importFrom(data.table,setDT)
 importFrom(magrittr,"%>%")
+importFrom(tidyr,separate_rows)
